@startuml ApresentacaoJogo
hide empty members
skinparam classAttributeIconSize 0

class Game {
  +id: UInt
  +winner: Player?
  --
  +placeOnBoard(player: Player, position: BoardPosition, card: Card, idx: UInt): Game
  +nextPhase(): Game
  +nextTurn(): Game
  +checkWinner(): Game
  +startTurnDraw(): Game
  +moveCharacter(from: BoardTile, to: BoardTile): Game
  +drawItem(player: Player, boardTile: BoardTile): Game
}

class Player {
  +user: User
  +hand: Map<UInt, Card>
  +currentCharacter: String?
  --
  +addToHand(card: Card): Player
  +removeFromHand(idx: UInt): Player
}

class Card {  }

enum CardType {
  TILE
  CHARACTER
  ITEM
}

class Board {
  --
  +checkBlocked(position: BoardPosition, tile: Tile)
  +placeTile(position: BoardPosition, tile: Tile, turnPhase: TurnPhase): Board
  +placeCharacter(position: BoardPosition, player: Player, character: Character, turnPhase: TurnPhase): Board
  +equipItem(position: BoardPosition, player: Player, item: Item, turnPhase: TurnPhase): Board
  +reduceCooldown(): Board
}

class BoardTile {
  +pos: BoardPosition
  +tile: Tile
  +cooldown: UInt
  +character: Character?
}

class BoardPosition {
  +x: Int
  +y: Int
  --
  +neighbour(direction: Direction): BoardPosition
  +coords(): String
}

class Tile {
  --
  +canConnectTo(dir: Direction, tile: Tile): Boolean
  +rotate(right: Boolean): Tile
  +getBlocked(adjTiles: List<Pair<Direction, BoardTile>>): List<Direction>
  +getAdjacent(tiles: BoardTiles, targetPos: BoardPosition): List<Pair<Direction, BoardTile>>
  +codeString(): String
}

enum Direction {
  EAST
  NORTH
  SOUTH
  WEST
}

class Turn {
  +gameTurn: UInt
  +playerTurn: List<UInt>
  --
  +turnString(): String
}

enum TurnPhase {
  CONSTRUCTION
  SUBSTITUTION
  MOVEMENT
}

class User {
  +id: UInt
}

class BoardTiles <<typealias>> {
  List<BoardTile>
}

class TileDeck <<typealias>> {
  Map<Tile, UInt>
}

class ItemDeck <<typealias>> {
  Map<Item, UInt>
}

Game *-- "2..*" Player : players
Game *-- "0..*" Spectator : spectators
Game *-- Board : board
Game *-- TileDeck : tileDeck
Game *-- ItemDeck : itemDeck
Game *-- Turn : turn
Game o-- "0..1" Player : winner

Player o-- User : user
Player *-- "0..*" Card : hand

Board *-- BoardTiles : tiles
BoardTiles *-- "0..*" BoardTile

BoardTile *-- BoardPosition : pos
BoardTile *-- Tile : tile
BoardTile o-- "0..1" Character : character

Tile *-- "1..*" Direction : connections

TileDeck *-- "0..*" Tile : copies
ItemDeck *-- "0..*" Item : copies

Turn *-- TurnPhase : phase

Card *-- CardType : type

class Spectator { }

@enduml
